auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:                              #labels <map[string]string>
    app: auth-deployment-labels
  name: auth-deployment                #name <string> Name must be unique within a namespace 
  namespace: ruoyi
spec:
  replicas: 1
  selector:                            #It must match the pod template's labels.
    matchLabels: 
      app: auth-pod-labels
  template:
    metadata:
      labels: 
        app: auth-pod-labels	        # <map[string]string>
      name: auth-pod
      annotations:
        datakit/logs: |
          [
            {
              "disable": false,
              "source": "ruoyi-bj-auth",
              "service": "auth",
              "multiline_match": "^\\d{4}-\\d{2}-\\d{2}"
            }
          ]
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - command: ["sh", "-ec", "exec java $(JAVA_OPTS) -jar ./ruoyi-auth.jar"]  
        image: zhaogangxp/ruoyi-auth:3.6.2
        #imagePullPolicy: Always
        name: auth-container
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /sharedata
          name: sharedata
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: sharedata
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-service-labels
  name: auth
  namespace: ruoyi
spec:
  ports:
  - name: auth-port
    port: 9200
    protocol: TCP
    targetPort: 9200	
  selector:
    app: auth-pod-labels
  type: ClusterIP
