gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:                              #labels <map[string]string>
    app: gateway-deployment-labels
  name: gateway-deployment                #name <string> Name must be unique within a namespace 
  namespace: ruoyi
spec:
  replicas: 1
  selector:                            #It must match the pod template's labels.
    matchLabels: 
      app: gateway-pod-labels
  template:
    metadata:
      labels: 
        app: gateway-pod-labels	        # <map[string]string>
      name: gateway-pod
      annotations:
        datakit/logs: |
          [
            {
              "disable": false,
              "source": "ruoyi",
              "service": "gateway",
              "multiline_match": "^\\d{4}-\\d{2}-\\d{2}"
            }
          ]
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - command: ["sh", "-ec", "exec java $(JAVA_OPTS) -jar ruoyi-gateway.jar"]  
        image: zhaogangxp/ruoyi-gateway:3.6.2
        name: gateway-container
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /sharedata
          name: sharedata
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: sharedata
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-service-labels
  name: gateway
  namespace: ruoyi
spec:
  ports:
  - name: gateway-port
    port: 8080
    protocol: TCP
    targetPort: 8080	
  selector:
    app: gateway-pod-labels
  type: ClusterIP
