mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ruoyi
  labels:
    app: mysql-service-labels
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql-pod-labels
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: ruoyi
  labels:
    app: mysql-deployment-labels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod-labels
  template:
    metadata:
      labels:
        app: mysql-pod-labels
    spec:
      containers:
      - name: mysql
        image: nacos/nacos-mysql:5.7
        args:
          - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: nacos-mysql-lib
          mountPath: /var/lib/mysql
        - name: sharedata
          mountPath: /docker-entrypoint-initdb.d
        - name: mysql-config-volumes
          mountPath: /etc/mysql/mysql.conf.d
      restartPolicy: Always    
      volumes:
      - name: nacos-mysql-lib
        emptyDir: {}
      - name: mysql-config-volumes
        configMap:
          name: mysql-config
          items:
            - key: mysqld.cnf
              path: mysqld.cnf
      - name: sharedata
        emptyDir: {}
