redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ruoyi
  labels:
    app: redis-service-labels
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
  selector:
    app: redis-pod-labels
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ruoyi
  labels:
    app: redis-deployment-labels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pod-labels
  template:
    metadata:
      labels:
        app: redis-pod-labels
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      # 修改容器内核参数方式一，初始化容器，改somaxconn参数。
      containers:
        - name: redis
          image: redis:5.0.8
          command:
            - "sh"
            - "-c"
            - "redis-server /usr/local/etc/redis/redis.conf"
          ports:
            - containerPort: 6379
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 300
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: redis.conf
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-config
        - name: sys
          hostPath:
            path: /sys
