system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:                              #labels <map[string]string>
    app: system-deployment-labels
  name: system-deployment                #name <string> Name must be unique within a namespace 
  namespace: ruoyi
spec:
  replicas: 1
  selector:                            #It must match the pod template's labels.
    matchLabels: 
      app: system-pod-labels
  template:
    metadata:
      labels: 
        app: system-pod-labels	        # <map[string]string>
      name: system-pod
      annotations:
        datakit/logs: |
          [
            {
              "disable": false,
              "source": "ruoyi-bj-system",
              "service": "system",
              "multiline_match": "^\\d{4}-\\d{2}-\\d{2}"
            }
          ]
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - command: ["sh", "-ec", "exec java $(JAVA_OPTS) -jar ruoyi-system.jar"]  
        image: zhaogangxp/ruoyi-system:3.6.2
        #imagePullPolicy: Always
        name: system-container
        ports:
        - containerPort: 9201
        volumeMounts:
        - mountPath: /sharedata
          name: sharedata
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: sharedata
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: system-service-labels
  name: system
  namespace: ruoyi
spec:
  ports:
  - name: system-port
    port: 9201
    protocol: TCP
    targetPort: 9201	
  selector:
    app: system-pod-labels
  type: ClusterIP
