nacos.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruoyi-ingress-nacos
  namespace: ruoyi
spec:
#  ingressClassName: nginx
  rules:
  - host: www.nacos.com
    http:
      paths:
      - backend:
          service:
            name: nacos
            port:
              number: 8848
        path: /
        pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: ruoyi
  labels:
    app: nacos-service-labels
spec:
  type: NodePort
  ports:
    - port: 8848
      name: client
      targetPort: 8848
      nodePort: 30048
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
      ## 兼容1.4.x版本的选举端口
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  selector:
    app: nacos-pod-labels
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: ruoyi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nacos-pod-labels
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      tolerations:
      - operator: Exists
      nodeSelector:     ## 配置该容器调度到指定节点，前提是将指定节点打好标签  ##
        ruoyi: "true"
      #tolerations:
      #- key: "env"
      #  operator: "Equal"
      #  value: "guance"
      #  effect: "NoSchedule"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nacos
          imagePullPolicy: IfNotPresent
          image: nacos/nacos-server:2.0.1
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 9848
              name: client-rpc
            - containerPort: 9849
              name: raft-rpc
            - containerPort: 7848
              name: old-raft-rpc
  selector:
    matchLabels:
      app: nacos-pod-labels
